syntax = "proto3";

package order;
option  go_package="github.com/Sri2103/services/pkg/rpc/order";

service OrderService {
  // Create an order
  rpc CreateOrder(OrderRequest) returns (OrderResponse) {}

  // Get an order by ID
  rpc GetOrder(GetOrderRequest) returns (OrderResponse) {}

  // List all orders
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}

  // Update an order
  rpc UpdateOrder(OrderRequest) returns (OrderResponse) {}

  // Delete an order
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {}
}

// Order request message
message OrderRequest {
  // Order ID (optional)
  string order_id = 1;

  // Order details
  Order order = 2;
}

// Order response message
message OrderResponse {
  // Order (optional)
  Order order = 1;

  // Error message (optional)
  string error_message = 2;
}

// Get order request message
message GetOrderRequest {
  // Order ID
  string order_id = 1;
}

// List orders request message
message ListOrdersRequest {
  // Pagination options
  PaginationOptions pagination_options = 1;
}

// List orders response message
message ListOrdersResponse {
  // Orders list
  repeated Order orders = 1;

  // Total number of orders
  int64 total_orders = 2;
}

// Delete order request message
message DeleteOrderRequest {
  // Order ID
  string order_id = 1;
}

// Order message
message Order {
  // Order ID
  string order_id = 1;

  // Customer ID
  string customer_id = 2;

  // Order items
  repeated OrderItem order_items = 3;

  // Order status
  OrderStatus order_status = 4;

  // Order total
  float order_total = 5;

  // Order created at
  string created_at = 6;

  // Order updated at
  string updated_at = 7;
}

// Order item message
message OrderItem {
  // Product ID
  string product_id = 1;

  // Product name
  string product_name = 2;

  // Product price
  float product_price = 3;

  // Product quantity
  int32 product_quantity = 4;
}

// Order status enum
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_IN_PROGRESS = 2;
  ORDER_STATUS_COMPLETED = 3;
  ORDER_STATUS_CANCELED = 4;
}


message DeleteOrderResponse {
    // User id of the user who owns
    // the order to be deleted
    float user_id =1;
    
    // The id of the order to delete.
    string order_id=2;

}

// Pagination options message
message PaginationOptions {
  // Page number
  int32 page_number = 1;

  // Page size
  int32 page_size = 2;
}